fix: fix TopicContent title wrap

--- a/src/routes/Topic/components/TopicContent.scss
+++ b/src/routes/Topic/components/TopicContent.scss
@@ -5,4 +5,10 @@
   img {
     max-width: 100%;
   }
+
+  :global {
+    .ant-card-head-title {
+      white-space: normal;
+    }
+  }
 }
